IaC/2.Terraform/K8s/lessons/138/monitoring/grafana/8-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  ingressClassName: external-ingress-nginx
  rules:
  - host: grafana.devopsbyexample.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
